fix: adjust compose and install some new dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - ${GOBID_DATABASE_PORT:-5432}:5432
     environment:
-      - POSTGRES_USER: ${GOBID_DATABASE_USER}
-      - POSTGRES_PASSWORD: ${GOBID_DATABASE_PASSWORD}
-      - POSTGRES_DB: ${GOBID_DATABASE_NAME}
+      POSTGRES_USER: ${GOBID_DATABASE_USER}
+      POSTGRES_PASSWORD: ${GOBID_DATABASE_PASSWORD}
+      POSTGRES_DB: ${GOBID_DATABASE_NAME}
     volumes:
       - db:/var/lib/postgresql/data
 
